# fall-2025-interest-group-projects

./: .gitignore  README.md
user/aerten3/: embedding.ipynb
user/harshul-basava/00-llm-inference/: config.yaml  exercises.txt  ollama.sbatch
user/harshul-basava/01-llm-lora/: finetune.ipynb  finetune.py  finetune.sbatch
user/ritesh/: lora_adapter.ipynb  pyproject.toml
user/rwang/00/: README.md  config.yaml  ollama.sbatch  ollama_benchmark.sbatch  vllm_serve.sbatch
user/rwang/01/: README.md  finetune.py  finetune.sbatch  pyproject.toml
user/shreyans/: finetune.ipynb
user/yli/00-llm-inference/: config.yaml  ex2.sh  ex3.sbatch  ollama.sbatch  results.csv  vllm.sbatch
user/yzhang3925/: information-retrieval.ipynb
